HelloUltraviolet/Fixtures/RejectedSource/Attributes/UnknownAttribute/Expected.uv
//! Expected diagnostic metadata for the UnknownAttribute rejected-source specimen.

expectedDiagnostic("E-MOD-2451", "AttrList-Unknown")
expectedDiagnostic("E-MOD-2451", "diagnostics.AttributeDiagnostics")
